--- a/magic.html
+++ b/magic.html
@@ -14,10 +14,10 @@
     <menu type="toolbar">
         <div id="navegador">
             <ul>
-                <li><a href="https://magic.wizards.com/">MAGIC </a></li>
-                <li><a href="https://magic-the-gathering.foroactivo.com/">COMPARTE</a></li>
-                <li><a href="https://magic.wizards.com/es/node/121816">JUEGA</a></li>
-                <li><a href="https://www.cardmarket.com/es/Magic">COMPRA</a></li>
+                <li><a href="https://magic.wizards.com/" target="_blank"> MAGIC </a></li>
+                <li><a href="https://magic-the-gathering.foroactivo.com/"target="_blank"> COMPARTE</a></li>
+                <li><a href="https://magic.wizards.com/es/node/121816" target="_blank">JUEGA</a></li>
+                <li><a href="https://www.cardmarket.com/es/Magic"target="_blank">COMPRA</a></li>
             </ul>
         </div>
     </menu>
